--- a/apache.yml
+++ b/apache.yml
@@ -1,13 +1,13 @@
 ---
 - name: Download Tomcat8 from tomcat.apache.org
-  hosts: testserver
+  hosts: webappserver
   vars:
-    download_url: https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.83/bin/apache-tomcat-8.5.83.tar.gz
+    download_url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.73/bin/apache-tomcat-9.0.73.tar.gz
   tasks:
    - name: Download Open JDK
      become: yes
      apt:
-      name: openjdk-8-jre-headless
+      name: openjdk-11-jre-headless
       update_cache: yes
       state: present
   
@@ -27,7 +27,7 @@
         name: tomcat
         state: present
 
-   - name: Create a Directory /opt/tomcat8
+   - name: Create a Directory /opt/tomcat9
      become: yes
      file:
        path: /opt/tomcat8
@@ -40,16 +40,16 @@
      become: yes
      unarchive:
        src: "{{download_url}}"
-       dest: /opt/tomcat8
+       dest: /opt/tomcat9
        mode: 0755
        remote_src: yes
        group: tomcat
        owner: tomcat
     
-   - name: Move files to the /opt/tomcat8 directory
+   - name: Move files to the /opt/tomcat9 directory
      become: yes
      become_user: tomcat
-     shell: "mv /opt/tomcat8/apache*/* /opt/tomcat8"
+     shell: "mv /opt/tomcat9/apache*/* /opt/tomcat9"
 
    - name: Creating a service file
      become: yes
@@ -91,7 +91,7 @@
    - name: Connect to Tomcat server on port 8080 and check status 200 - Try 5 times
      tags: test
      uri:
-       url: http://localhost:8080
+       url: http://3.110.214.85:8080
      register: result
      until: "result.status == 200"
      retries: 5
