--- a/apache.yml
+++ b/apache.yml
@@ -1,13 +1,13 @@
 ---
 - name: Download Tomcat8 from tomcat.apache.org
-  hosts: webappserver
+  hosts: 172.31.35.192
   vars:
     download_url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.73/bin/apache-tomcat-9.0.73.tar.gz
   tasks:
    - name: Download Open JDK
      become: yes
-     apt:
-      name: openjdk-11-jre-headless
+     yum:
+      name: amazon-linux-extras install java-openjdk-11
       update_cache: yes
       state: present
   
