--- a/apache.yml
+++ b/apache.yml
@@ -1,15 +1,15 @@
 ---
 - name: Download Tomcat9 from tomcat.apache.org
   hosts: 172.31.35.192
+  remote_user: ec2-user
+  become: yes
   vars:
     download_url: https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.73/bin/apache-tomcat-9.0.73.tar.gz
   tasks:
-   - name: Download Open JDK
-     become: yes
-     yum:
-      name: amazon-linux-extras install java-openjdk-11
-      update_cache: yes
-      state: present
+   - name: Install JAVA
+      yum:
+        name: default-jdk
+        state: present
   
    - name: validate if Java is availble 
      shell: 
