--- a/apache.yml
+++ b/apache.yml
@@ -7,7 +7,7 @@
    - name: Download open JDK
      become: yes
      yum:
-      name: openjdk-11-jre-headless
+      name: openjdk-11
       state: present
   
    - name: validate if Java is availble 
