--- a/ansible-nexus.yml
+++ b/ansible-nexus.yml
@@ -7,6 +7,6 @@
   - name: Download artifact 
     get_url:
       url: http://65.2.169.22:8081/repository/java-jsp-diary/com/yusufsezer/java-jsp-diary/0.0.1/java-jsp-diary-0.0.1.war
-      dest: /home/ec2-user
+      dest: /home/ec2-user/tomcat/webapps/
       url_username: admin
       url_password: admin
