--- a/deploy.yml
+++ b/deploy.yml
@@ -1,2 +1,2 @@
-- import_playbook: tomcat.yml
-- import_playbook: ansible-nexus.yml
+- import_playbook: installtomcat.yml
+- import_playbook: downloadanddeploy.yml
