--- a/docker-deploy.yml
+++ b/docker-deploy.yml
@@ -22,7 +22,7 @@
     - name: start the container
       docker_container:
         name: java-jsp-diary
-        image: "gb443330/java-jsp-diary:{{DOCKER_tag}}"
+        image: "gb443330/java-jsp-diary:{{DOCKER_TAG}}"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
